---------------------------------------------------------------
wxWidgets Change Log - For more verbose changes, see the manual
---------------------------------------------------------------

2.6.1
-----

All:

- Added wxLaunchDefaultBrowser.

All (GUI):

- Fixed potential infinite loop when adjusting wxScrolledWindow scrollbars.
- Radio in menus do not send menu event for selections of already selected item.
- Fixed wrong positioning of marks and enumerations in lists of wxHTML.
- wxImage::Rotate90 respects alpha channel.
- Added wxEVT_SCROLL_CHANGED as synonym for wxEVT_SCROLL_ENDSCROLL

wxMSW:

- Fixed erroneous selection of content in wxComboBox when within a wxStaticBox
  (checking for selection caused by WM_STYLECHANGED).
- Added deferred positioning to wxRadioBox, wxSlider and wxSpinCtrl and thereby
  eliminated some refresh glitches when resizing.
- Eliminated further refresh glitches caused by wxRadioBox (to nearby controls)
  by refreshing parent when the radio box moves.
- Added ability set the system option "msw.staticbox.optimized-paint" to 0 to
  allow a panel to paint graphics around controls within a static box.
- Worked around an apparent bug in deferred window positioning (moving a
  window from (x, y) to (a, b) and back to (x, y) misses the last step) by
  checking window positions against corresponding sizer state, if any.
- A control's text colour now reflects the system colour setting.
- Fixed wxFileName::GetLongPath() to behave correctly during the first call too.
- Fixed alpha blitting to take into account source position.
- Setting foreground colour for wxCheckBox now works when using XP themes too.
- Now uses newer font MS Shell Dlg 2 if possible.
- Compiles again with WIN64.
- Winelib compilation now works.
- When converting a wxIcon to a bitmap check if the icon has an alpha
  channel and set the bitmap to use it.
- wxSlider now also sends wxEVT_SCROLL_CHANGED when using mouse wheel

wxGTK:

- Added support for wxSTAY_ON_TOP (GTK 2.4+).